--- a/src/patternfly/components/Page/page.scss
+++ b/src/patternfly/components/Page/page.scss
@@ -324,10 +324,7 @@ $pf-page-v6--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   border-radius: var(--#{$page}__main-container--BorderRadius);
 
   &.pf-m-fill,
-  &:has(.#{$page}__main-section.pf-m-fill,
-    .#{$page}__main-group.pf-m-fill,
-    .#{$page}__main-wizard,
-    .#{$drawer}) {
+  &:has(.#{$page}__main-wizard) {
     align-self: stretch;
   }
 }
