feat(page): move sidebar width to grid and remove modifier

--- a/src/patternfly/components/Masthead/masthead.scss
+++ b/src/patternfly/components/Masthead/masthead.scss
@@ -30,8 +30,8 @@ $pf-v6-c-masthead--inset-map: build-spacer-map("none", "sm", "md", "lg", "xl", "
   --#{$masthead}--m-display-stack__content--Order: 1;
 
   // * Masthead inline
-  --#{$masthead}--m-display-inline--GridTemplateColumns: subgrid; // max-content max-content 1fr;
-  --#{$masthead}--m-display-inline__main--GridColumn: 2; // TODO 
+  --#{$masthead}--m-display-inline--GridTemplateColumns: min-content max-content 1fr;
+  --#{$masthead}--m-display-inline__main--GridColumn: 2; 
   --#{$masthead}--m-display-inline__main--Order: 0;
   --#{$masthead}--m-display-inline__main--PaddingBlockEnd: 0;
   --#{$masthead}--m-display-inline__main--BorderBlockEnd: 0;
