--- a/src/patternfly/components/Page/page.scss
+++ b/src/patternfly/components/Page/page.scss
@@ -60,7 +60,7 @@ $pf-page-v6--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   --#{$page}__main-container--MaxHeight: calc(100% - var(--pf-t--global--spacer--lg));
   --#{$page}__main-container--BackgroundColor: var(--pf-t--global--background--color--primary--default);
   --#{$page}__main-container--MarginInlineStart: var(--#{$page}--inset); // var(--pf-t--global--spacer--lg); // TODO should this be var(--#{$page}--inset);
-  --#{$page}__main-container--MarginInlineEnd: var(--#{$page}--inset);  // var(--pf-t--global--spacer--lg);
+  --#{$page}__main-container--MarginInlineEnd: var(--#{$page}--inset);
   --#{$page}__main-container--BorderRadius: var(--pf-t--global--border--radius--large);
   --#{$page}__main-container--BorderWidth: var(--pf-t--global--spacer--sm); // TODO Change to be a page outline token
   --#{$page}__main-container--BorderColor: var(--#{$page}__main-container--BackgroundColor); // TODO Border should match the background to blend in - change to be a page outline token
@@ -135,7 +135,7 @@ $pf-page-v6--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
     grid-template-areas:
       "header header header"
       "main main main";
-    grid-template-columns: min-content max-content 1fr; // TODO this still has the problem of too much space for the toggle
+    grid-template-columns: min-content max-content 1fr;
     column-gap: var(--pf-t--global--spacer--gutter--default); // TODO good use of gutter or no?
     }
 
@@ -143,14 +143,17 @@ $pf-page-v6--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
     grid-template-areas:
       "header header header"
       "sidebar sidebar main";
-    grid-template-columns: min-content max-content 1fr;
+    grid-template-columns: min-content var(--#{$page}__sidebar--Width) 1fr;
     }
   }
 
 // Header
 .#{$page} > .#{$masthead} {
+  --#{$masthead}--m-display-inline--GridTemplateColumns: subgrid;
+
   z-index: var(--#{$page}--c-masthead--ZIndex);
   grid-area: header;
+
 }
 
 // Sidebar
@@ -160,7 +163,6 @@ $pf-page-v6--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   flex-direction: column;
   grid-row-start: 2;
   grid-column-start: 1;
-  width: var(--#{$page}__sidebar--Width);
   padding-block-start: 0;
   padding-block-end: var(--#{$page}__sidebar--PaddingBlockEnd);
   padding-inline-start: var(--#{$page}__sidebar--PaddingInlineStart);
