--- a/src/patternfly/components/Toolbar/toolbar-content-section.hbs
+++ b/src/patternfly/components/Toolbar/toolbar-content-section.hbs
@@ -1,3 +1,5 @@
+{{setProp 'IsContentSection' true}}
+
 <div class="{{pfv}}toolbar__content-section{{#if toolbar-content-section--modifier}} {{toolbar-content-section--modifier}}{{/if}}"
   {{#if toolbar-content-section--attribute}}
     {{{toolbar-content-section--attribute}}}
