--- a/src/patternfly/components/Toolbar/toolbar-expandable-content.hbs
+++ b/src/patternfly/components/Toolbar/toolbar-expandable-content.hbs
@@ -1,4 +1,8 @@
-<div class="{{pfv}}toolbar__expandable-content{{#if toolbar-expandable-content--modifier}} {{toolbar-expandable-content--modifier}}{{/if}}{{#if toolbar-expandable-content--IsExpanded}} pf-m-expanded{{/if}}{{#unless toolbar-expandable-content--IsExpanded}} pf-m-hidden{{/unless}}"
+{{setProp 'IsExpandableContentSection' true}}
+
+<div class="{{pfv}}toolbar__expandable-content{{#if toolbar-expandable-content--modifier}} {{toolbar-expandable-content--modifier}}{{/if}}
+  {{#if toolbar-expandable-content--IsExpanded}} pf-m-expanded{{/if}}
+  {{#unless toolbar-expandable-content--IsExpanded}} pf-m-hidden{{/unless}}"
   id="{{toolbar--id}}-expandable-content"
   {{#if toolbar-expandable-content--attribute}}
     {{{toolbar-expandable-content--attribute}}}
