feat(MenuToggle): split action toggle text modifier

--- a/src/patternfly/components/MenuToggle/menu-toggle-button.hbs
+++ b/src/patternfly/components/MenuToggle/menu-toggle-button.hbs
@@ -1,4 +1,4 @@
-<button class="{{pfv}}menu-toggle__button{{#if menu-toggle-button--modifier}} {{menu-toggle-button--modifier}}{{/if}}"
+<button class="{{pfv}}menu-toggle__button{{#if menu-toggle-button--modifier}} {{menu-toggle-button--modifier}}{{/if}}  {{#if menu-toggle-button--IsTextToggle}}pf-m-text{{/if}}"
   type="button"
   {{#if menu-toggle-button--IsToggle}}
     aria-expanded="{{#if menu-toggle--IsExpanded}}true{{else}}false{{/if}}"
