--- a/src/patternfly/demos/Toolbar/toolbar-template-filter-group.hbs
+++ b/src/patternfly/demos/Toolbar/toolbar-template-filter-group.hbs
@@ -1,4 +1,4 @@
-{{#> toolbar-group toolbar-group--modifier="pf-m-filter-group"}}
+{{#> toolbar-group toolbar-group--IsFilterGroup=true}}
   {{#> toolbar-item}}
     {{> menu-toggle menu-toggle--text="Status" menu-toggle--id=(concat toolbar--id '-select-checkbox-status')}}
   {{/toolbar-item}}
