--- a/src/patternfly/demos/Toolbar/toolbar-template-content.hbs
+++ b/src/patternfly/demos/Toolbar/toolbar-template-content.hbs
@@ -24,7 +24,7 @@
 
 {{!-- filter group --}}
 {{#if toolbar-template--HasFilterGroup}}
-  {{#> toolbar-group toolbar-group--modifier="pf-m-filter-group"}}
+  {{#> toolbar-group toolbar-group--IsFilterGroup=true}}
     {{#> toolbar-item}}
       {{> menu-toggle menu-toggle--text="Status" menu-toggle--id=(concat toolbar--id '-select-checkbox-status')}}
     {{/toolbar-item}}
