--- a/src/patternfly/demos/Toolbar/toolbar-template.hbs
+++ b/src/patternfly/demos/Toolbar/toolbar-template.hbs
@@ -31,7 +31,7 @@ Options: [
 
       {{!-- toggle group --}}
       {{#if toolbar-template--HasToggleGroup}}
-        {{#> toolbar-group toolbar-group--modifier="pf-m-toggle-group pf-m-show-on-xl"}}
+        {{#> toolbar-group toolbar-group--IsToggleGroup=true toolbar-group--modifier="pf-m-show-on-xl"}}
           {{> toolbar-toggle}}
           {{> toolbar-template-content}}
         {{/toolbar-group}}
