--- a/src/patternfly/base/tokens/tokens-palette.scss
+++ b/src/patternfly/base/tokens/tokens-palette.scss
@@ -1,16 +1,16 @@
 
 // Do not edit directly
-// Generated on Fri, 12 Jul 2024 15:40:40 GMT
+// Generated on Tue, 16 Jul 2024 23:44:44 GMT
 
 @mixin pf-v6-tokens {
-  --pf-t--color--black: #000;
+  --pf-t--color--black: #000000;
   --pf-t--color--blue--10: #e0f0ff;
   --pf-t--color--blue--20: #b9dafc;
   --pf-t--color--blue--30: #92c5f9;
   --pf-t--color--blue--40: #4394e5;
-  --pf-t--color--blue--50: #06c;
+  --pf-t--color--blue--50: #0066cc;
   --pf-t--color--blue--60: #004d99;
-  --pf-t--color--blue--70: #036;
+  --pf-t--color--blue--70: #003366;
   --pf-t--color--gray--10: #f2f2f2;
   --pf-t--color--gray--20: #e0e0e0;
   --pf-t--color--gray--30: #c7c7c7;
@@ -46,7 +46,7 @@
   --pf-t--color--red--20: #fbc5c5;
   --pf-t--color--red--30: #f9a8a8;
   --pf-t--color--red--40: #f56e6e;
-  --pf-t--color--red--50: #e00;
+  --pf-t--color--red--50: #ee0000;
   --pf-t--color--red--60: #a60000;
   --pf-t--color--red--70: #5f0000;
   --pf-t--color--red-orange--10: #ffe3d9;
@@ -63,7 +63,7 @@
   --pf-t--color--teal--50: #37a3a3;
   --pf-t--color--teal--60: #147878;
   --pf-t--color--teal--70: #004d4d;
-  --pf-t--color--white: #fff;
+  --pf-t--color--white: #ffffff;
   --pf-t--color--yellow--10: #fff4cc;
   --pf-t--color--yellow--20: #ffe072;
   --pf-t--color--yellow--30: #ffcc17;
