fix(toolbar): change icon button group to action group plain

--- a/src/patternfly/components/Toolbar/toolbar-icon-button-group-example.hbs
+++ b/src/patternfly/components/Toolbar/toolbar-icon-button-group-example.hbs
@@ -25,7 +25,7 @@
     {{/overflow-menu}}
   {{/toolbar-item}}
 {{else}}
-  {{#> toolbar-group toolbar-group--modifier="pf-m-icon-button-group"}}
+  {{#> toolbar-group toolbar-group--IsActionGroupPlain=true}}
     {{#> toolbar-item}}
       {{> button button--IsPlain=true button--IsIcon=true button--icon="edit" button--aria-label="Edit"}}
     {{/toolbar-item}}
