feat(page): rearrange masthead to wrap toggle and brand

--- a/src/patternfly/components/Masthead/masthead-brand.hbs
+++ b/src/patternfly/components/Masthead/masthead-brand.hbs
@@ -1,17 +1,6 @@
-<{{#if masthead-brand--type}}{{masthead-brand--type}}{{else}}a{{/if}} class="{{pfv}}masthead__brand{{#if masthead-brand--modifier}} {{masthead-brand--modifier}}{{/if}}"
-  {{#unless masthead-brand--type}}
-    {{#if masthead-brand--href}}
-      href="{{masthead-brand--href}}"
-    {{else}}
-      href="#"
-    {{/if}}
-  {{/unless}}
+<div class="{{pfv}}masthead__brand{{#if masthead-brand--modifier}} {{masthead-brand--modifier}}{{/if}}"
   {{#if masthead-brand--attribute}}
     {{{masthead-brand--attribute}}}
   {{/if}}>
-  {{#if @partial-block}}
-    {{> @partial-block}}
-  {{else}}
-    {{> masthead-logo}}
-  {{/if}}
-</{{#if masthead-brand--type}}{{masthead-brand--type}}{{else}}a{{/if}}>
+  {{> @partial-block}}
+</div>
