--- a/src/patternfly/components/Page/page.scss
+++ b/src/patternfly/components/Page/page.scss
@@ -8,18 +8,13 @@ $pf-page-v6--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 :where(:root, .#{$page}) {
   --#{$page}--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
   --#{$page}--inset: var(--pf-t--global--spacer--inset--page-chrome);
-  --#{$page}--xl--inset: var(--pf-t--global--spacer--xl); // TODO do we need this? If so, sidebar body needs to adjust also
 
   // Header
   --#{$page}--c-masthead--ZIndex: var(--pf-t--global--z-index--md);
 
-  @media (min-width: $pf-v6-global--breakpoint--xl) {
-    --#{$page}--inset: var(--#{$page}--xl--inset);
-  }
-
   // Sidebar
   --#{$page}__sidebar--ZIndex: var(--pf-t--global--z-index--sm);
-  --#{$page}__sidebar--Width: #{pf-size-prem(226px)}; // This needs to be sidebar minus toggle width
+  --#{$page}__sidebar--Width: #{pf-size-prem(290px)};
   --#{$page}__sidebar--BackgroundColor: var(--pf-t--global--background--color--secondary--default);
   --#{$page}__sidebar--BoxShadow: none;
   --#{$page}__sidebar--Transition: var(--pf-t--global--transition);
@@ -45,6 +40,7 @@ $pf-page-v6--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
 
   // Sidebar body
   --#{$page}__sidebar-body--PaddingInlineEnd: var(--pf-t--global--spacer--gutter--default);
+  --#{$page}__sidebar-body--breakpoint--xl--PaddingInlineEnd: var(--pf-t--global--spacer--inset--page-chrome);
   --#{$page}__sidebar-body--PaddingInlineStart: var(--pf-t--global--spacer--inset--page-chrome);
   --#{$page}__sidebar-body--m-page-insets--PaddingInlineEnd: var(--#{$page}--inset);
   --#{$page}__sidebar-body--m-page-insets--PaddingInlineStart: var(--#{$page}--inset);
@@ -59,7 +55,7 @@ $pf-page-v6--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   --#{$page}__main-container--ZIndex: var(--pf-t--global--z-index--xs);
   --#{$page}__main-container--MaxHeight: calc(100% - var(--pf-t--global--spacer--lg));
   --#{$page}__main-container--BackgroundColor: var(--pf-t--global--background--color--primary--default);
-  --#{$page}__main-container--MarginInlineStart: var(--#{$page}--inset); // var(--pf-t--global--spacer--lg); // TODO should this be var(--#{$page}--inset);
+  --#{$page}__main-container--MarginInlineStart: var(--#{$page}--inset); 
   --#{$page}__main-container--MarginInlineEnd: var(--#{$page}--inset);
   --#{$page}__main-container--BorderRadius: var(--pf-t--global--border--radius--large);
   --#{$page}__main-container--BorderWidth: var(--pf-t--global--spacer--sm); // TODO Change to be a page outline token
@@ -131,26 +127,18 @@ $pf-page-v6--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   max-height: 100%;
   background-color: var(--#{$page}--BackgroundColor);
 
-  @media (min-width: $pf-v6-global--breakpoint--md) {
-    grid-template-areas:
-      "header header header"
-      "main main main";
-    grid-template-columns: min-content max-content 1fr;
-    column-gap: var(--pf-t--global--spacer--gutter--default); // TODO good use of gutter or no? (make a variable)
-    }
-
   @media (min-width: $pf-v6-global--breakpoint--xl) {
     grid-template-areas:
-      "header header header"
-      "sidebar sidebar main";
-    grid-template-columns: min-content var(--#{$page}__sidebar--Width) 1fr;
+      "header header"
+      "sidebar main";
+    grid-template-columns: min-content 1fr;
     }
   }
 
 // Header
 .#{$page} > .#{$masthead} {
   @media (min-width: $pf-v6-global--breakpoint--xl) {
-    --#{$masthead}--m-display-inline--breakpoint--xl--GridTemplateColumns: subgrid;
+    --#{$masthead}--m-display-inline--GridTemplateColumns: var(--#{$masthead}--m-display-inline--breakpoint--xl--GridTemplateColumns);
   }
 
   z-index: var(--#{$page}--c-masthead--ZIndex);
@@ -163,11 +151,14 @@ $pf-page-v6--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   z-index: var(--#{$page}__sidebar--ZIndex);
   display: flex;
   flex-direction: column;
+  grid-area: sidebar;
   grid-row-start: 2;
   grid-column-start: 1;
+  width: var(--#{$page}__sidebar--Width);
   padding-block-start: 0;
   padding-block-end: var(--#{$page}__sidebar--PaddingBlockEnd);
   padding-inline-start: var(--#{$page}__sidebar--PaddingInlineStart);
+  padding-inline-end: var(--#{$page}__sidebar--PaddingInlineEnd);
   margin-inline-end: var(--#{$page}__sidebar--MarginInlineEnd);
   overflow-x: hidden;
   overflow-y: auto;
@@ -176,7 +167,7 @@ $pf-page-v6--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
   transition: var(--#{$page}__sidebar--Transition);
 
   @media (min-width: $pf-v6-global--breakpoint--xl) {
-    grid-area: sidebar;
+    --#{$page}__sidebar-body--PaddingInlineEnd: var(--#{$page}__sidebar-body--breakpoint--xl--PaddingInlineEnd);
   }
 
   @include pf-v6-bidirectional-style(
