--- a/src/patternfly/components/Masthead/masthead.scss
+++ b/src/patternfly/components/Masthead/masthead.scss
@@ -39,13 +39,13 @@ $pf-v6-c-masthead--inset-map: build-spacer-map("none", "sm", "md", "lg", "xl", "
   --#{$masthead}--m-display-stack__main--ColumnGap: unset; // no column gap needed until it's flex display
 
   // * Masthead inline
-  --#{$masthead}--m-display-inline--GridTemplateColumns: min-content max-content 1fr;
+  --#{$masthead}--m-display-inline--GridTemplateColumns: min-content 1fr;
   --#{$masthead}--m-display-inline--breakpoint--xl--GridTemplateColumns: subgrid;
-  --#{$masthead}--m-display-inline__brand--GridColumn: 2; 
-  --#{$masthead}--m-display-inline__brand--Order: 0;
-  --#{$masthead}--m-display-inline__brand--PaddingBlockEnd: 0;
-  --#{$masthead}--m-display-inline__brand--BorderBlockEnd: 0;
-  --#{$masthead}--m-display-inline__content--GridColumn: 3;
+  --#{$masthead}--m-display-inline__main--GridColumn: 1; 
+  --#{$masthead}--m-display-inline__main--Order: 0;
+  --#{$masthead}--m-display-inline__main--PaddingBlockEnd: 0;
+  --#{$masthead}--m-display-inline__main--BorderBlockEnd: 0;
+  --#{$masthead}--m-display-inline__content--GridColumn: 2;
   --#{$masthead}--m-display-inline__content--Order: 0;
   --#{$masthead}--m-display-inline__main--Display: flex;
   --#{$masthead}--m-display-inline__main--ColumnGap: var(--pf-t--global--spacer--md);
@@ -164,42 +164,35 @@ $pf-v6-c-masthead--inset-map: build-spacer-map("none", "sm", "md", "lg", "xl", "
   position: relative;
 }
 
-// - Masthead brand, logo, content
-.#{$masthead}__brand,
-// .#{$masthead}__logo,
-.#{$masthead}__content {
-  display: flex;
-  align-self: stretch;
-  min-width: #{pf-size-prem(4ch)}; // allow flex containers to shrink to fit possible overflow
-}
-
 // - Masthead brand
 .#{$masthead}__brand {
+  display: flex;
+  flex-shrink: 0;
   grid-column: var(--#{$masthead}__brand--GridColumn);
   row-gap: var(--#{$masthead}__brand--RowGap, var(--#{$masthead}--RowGap));
-  
-  // align-items: var(--#{$masthead}__brand--AlignItems); // TODO
+  align-self: stretch;
   order: var(--#{$masthead}__brand--Order);
+  min-width: #{pf-size-prem(4ch)}; // allow flex containers to shrink to fit possible overflow
   padding-block-end: var(--#{$masthead}__brand--PaddingBlockEnd);
   border-block-end: var(--#{$masthead}__brand--BorderBlockEnd);
 }
 
 // - Masthead content
 .#{$masthead}__content {
+  display: flex;
   flex-wrap: wrap;
   grid-column: var(--#{$masthead}__content--GridColumn);
   grid-column-end: -1; // force content to right edge or full available width
   row-gap: var(--#{$masthead}__content-RowGap, var(--#{$masthead}--RowGap));
   column-gap: var(--#{$masthead}__content--ColumnGap, var(--#{$masthead}--ColumnGap));
-
-  // align-items: var(--#{$masthead}__content--AlignItems); // TODO
+  align-self: stretch;
   order: var(--#{$masthead}__content--Order);
+  min-width: #{pf-size-prem(4ch)}; // allow flex containers to shrink to fit possible overflow
 }
 
 // - Masthead logo
 .#{$masthead}__logo {
-  // align-items: var(--#{$masthead}__logo--AlignItems, var(--#{$masthead}--AlignItems));
-  // align-self: center;
+  position: relative;
   max-height: var(--#{$masthead}__logo--MaxHeight);
 
   > * {
