fix(vars): clean up references to old button spacers (#6851)

--- a/src/patternfly/components/DataList/data-list.scss
+++ b/src/patternfly/components/DataList/data-list.scss
@@ -97,10 +97,9 @@
   --#{$data-list}__item-action--PaddingBlockEnd: var(--pf-t--global--spacer--lg);
   --#{$data-list}__item-action--MarginInlineStart: var(--pf-t--global--spacer--md);
   --#{$data-list}__item-action--md--MarginInlineStart: var(--pf-t--global--spacer--xl);
-  --#{$data-list}__item-action--not-last-child--MarginInlineEnd: var(--pf-t--global--spacer--md);
-  --#{$data-list}__item-action__action--MarginBlockStart: calc(var(--pf-t--global--spacer--sm) * -1); // former form-element
-  --#{$data-list}__action--MarginBlockStart: var(--#{$data-list}__item-action__action--MarginBlockStart); // update at breaking change
-  --#{$data-list}__item-action__action--MarginBlockEnd: calc(var(--pf-t--global--spacer--sm) * -1); // former form-element
+  --#{$data-list}__item-action--Gap: var(--pf-t--global--spacer--gap--action-to-action--default);
+  --#{$data-list}__action--MarginBlockStart: calc(var(--pf-t--global--spacer--control--vertical--plain) * -1);
+  --#{$data-list}__action--MarginBlockEnd: calc(var(--pf-t--global--spacer--control--vertical--plain) * -1);
 
   // expandable content
   --#{$data-list}__expandable-content--BackgroundColor: var( --pf-t--global--background--color--primary--default);
@@ -134,9 +133,8 @@
   --#{$data-list}--m-compact__item-action--PaddingBlockStart: var(--pf-t--global--spacer--sm);
   --#{$data-list}--m-compact__item-action--PaddingBlockEnd: var(--pf-t--global--spacer--sm);
   --#{$data-list}--m-compact__item-action--MarginInlineStart: var(--pf-t--global--spacer--md);
-  --#{$data-list}--m-compact__item-action__action--MarginBlockStart: calc(var(--#{$data-list}--m-compact__item-action--PaddingBlockStart) * -1);
-  --#{$data-list}--m-compact__item-action__action--MarginBlockEnd: calc(var(--#{$data-list}--m-compact__item-action--PaddingBlockEnd) * -1);
-  --#{$data-list}--m-compact__action--MarginBlockStart: var(--#{$data-list}--m-compact__item-action__action--MarginBlockStart);
+  --#{$data-list}--m-compact__action--MarginBlockStart: calc(var(--#{$data-list}--m-compact__item-action--PaddingBlockStart) * -1);
+  --#{$data-list}--m-compact__action--MarginBlockEnd: calc(var(--#{$data-list}--m-compact__item-action--PaddingBlockEnd) * -1);
   --#{$data-list}--m-compact__item-content--PaddingBlockEnd: var(--pf-t--global--spacer--sm);
   --#{$data-list}--m-compact__item-draggable-button--MarginBlockStart: calc(var(--pf-t--global--spacer--sm) * -1);
   --#{$data-list}--m-compact__item-draggable-button--MarginBlockEnd: calc(var(--pf-t--global--spacer--sm) * -1);
@@ -153,13 +151,12 @@
 
   &.pf-m-compact {
     --#{$data-list}__check--FontSize: var(--#{$data-list}--m-compact__check--FontSize);
-    --#{$data-list}__action--MarginBlockStart: var(--#{$data-list}--m-compact__action--MarginBlockStart);
     --#{$data-list}--FontSize: var(--#{$data-list}--m-compact--FontSize);
     --#{$data-list}__item-action--MarginInlineStart: var(--#{$data-list}--m-compact__item-action--MarginInlineStart);
     --#{$data-list}__item-action--PaddingBlockStart: var(--#{$data-list}--m-compact__item-action--PaddingBlockStart);
     --#{$data-list}__item-action--PaddingBlockEnd: var(--#{$data-list}--m-compact__item-action--PaddingBlockEnd);
-    --#{$data-list}__item-action__action--MarginBlockStart: var(--#{$data-list}--m-compact__item-action__action--MarginBlockStart);
-    --#{$data-list}__item-action__action--MarginBlockEnd: var(--#{$data-list}--m-compact__item-action__action--MarginBlockEnd);
+    --#{$data-list}__action--MarginBlockStart: var(--#{$data-list}--m-compact__action--MarginBlockStart);
+    --#{$data-list}__action--MarginBlockEnd: var(--#{$data-list}--m-compact__action--MarginBlockEnd);
     --#{$data-list}__item-control--MarginInlineEnd: var(--#{$data-list}--m-compact__item-control--MarginInlineEnd);
     --#{$data-list}__item-control--PaddingBlockStart: var(--#{$data-list}--m-compact__item-control--PaddingBlockStart);
     --#{$data-list}__item-control--PaddingBlockEnd: var(--#{$data-list}--m-compact__item-control--PaddingBlockEnd);
@@ -321,21 +318,18 @@
 .#{$data-list}__item-action {
   @include pf-v6-hidden-visible(var(--#{$data-list}__item-action--Display));
 
+  gap: var(--#{$data-list}__item-action--Gap);
   align-content: flex-start;
   align-items: flex-start;
   padding-block-start: var(--#{$data-list}__item-action--PaddingBlockStart);
   padding-block-end: var(--#{$data-list}__item-action--PaddingBlockEnd);
   margin-inline-start: var(--#{$data-list}__item-action--MarginInlineStart);
+}
 
-  > *:not(:last-child) {
-    margin-inline-end: var(--#{$data-list}__item-action--not-last-child--MarginInlineEnd);
-  }
-
-  // offset action button
-  .#{$data-list}__action {
-    margin-block-start: var(--#{$data-list}__action--MarginBlockStart);
-    margin-block-end: var(--#{$data-list}__item-action__action--MarginBlockEnd);
-  }
+// offset action button
+.#{$data-list}__action {
+  margin-block-start: var(--#{$data-list}__action--MarginBlockStart);
+  margin-block-end: var(--#{$data-list}__action--MarginBlockEnd);
 }
 
 // toggle
