--- a/src/patternfly/components/Table/table-tree-view.scss
+++ b/src/patternfly/components/Table/table-tree-view.scss
@@ -56,10 +56,6 @@ $pf-v6-c-tree-view--MaxDepth: 10;
       --#{$table}__tree-view-main--PaddingInlineStart: calc(var(--#{$table}__tree-view-main--nested-indent--base) * #{$i - 1} + var(--#{$table}__tree-view-main--indent--base));
     }
   }
-
-  .#{$table}.pf-m-tree-view .#{$table}__thead {
-    display: none;
-  }
 }
 
 // - Table tree vew main
@@ -281,12 +277,8 @@ $pf-v6-c-tree-view--MaxDepth: 10;
     }
   }
 
-  // - Table tree view title header cell
-  .#{$table}__tree-view-title-header-cell {
-    display: flex;
-    width: auto;
-    min-width: auto;
-    max-width: none;
+  .#{$table}__thead {
+    display: none;
   }
 
   // - Table tree view details toggle - Table tree view action
