fix(table-tree-view): reset table tree view th header cell min/max-width, width , and display (#6868)

--- a/src/patternfly/components/Table/table-tree-view.scss
+++ b/src/patternfly/components/Table/table-tree-view.scss
@@ -277,9 +277,8 @@ $pf-v6-c-tree-view--MaxDepth: 10;
     }
   }
 
-  // - Table tree view title header cell
-  .#{$table}__tree-view-title-header-cell {
-    display: block;
+  .#{$table}__thead {
+    display: none;
   }
 
   // - Table tree view details toggle - Table tree view action
